# Algorithm-Visualizer

./: CMakeLists.txt  ParserInput.cpp  ParserInput.hpp  README.md  SortingAlgorithms.cpp  SortingAlgorithms.hpp  Visualizations.hpp  dev_log.md  help.txt  main.cpp
.cache/clangd/index/: AlgorithmVisualizer.hpp.1A52D7385ED27EFA.idx  VisualizeEngine.cpp.4D39065B9233D1D3.idx  VisualizeEngine.hpp.8E1F6D85F0B64BF0.idx  main.cpp.DB59A22E3348EE06.idx
algorithms/includes/: BubbleSortVisualizer.hpp
algorithms/sorting/: BubbleSortVisualizer.cpp  BubbleSortVisualizer.hpp
core/: VisualizeEngine.cpp  VisualizeEngine.hpp  main.cpp
core/visualizer/: AlgorithmVisualizer.hpp  VisualizeEngine.cpp  VisualizeEngine.hpp
include/Algorithms/: SortingAlgorithms.hpp
include/HelperParser/: ParserInput.hpp
include/Visualizer/: Visualizations.hpp
sfml_ui/: UI.cpp  UI.hpp
src/: main.cpp
src/Algorithms/: SortingAlgorithms.cpp
src/HelperParser/: ParserInput.cpp
